1.5.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13329: ezcMail fetchParts() no longer generates an error when
  parsing a mail with an empty body.
- Fixed a special case in sortFromOffset() where $range was undefined.


1.5 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.5rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13038: Added support for non-ascii and mime-emcoded (non-RFC)
  filenames for mail attachments.


1.5beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13010: The transport connection handles correcly cases where
  CRLF is split in 2 different blocks read from server.


1.5alpha1 - Monday 05 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12844: getTmpDir() not properly set in Windows.
- Fixed issue #12903: The mail digest size is not calculated twice anymore.
- Fixed issue #12930: The SMTP authentication methods are used in correct
  strength order now.
- Implemented feature request #11937: Switch to turn off automatic inclusion
  of files with the Mail Composer.
- Implemented feature request #12203: Replaced hard-coded paths for temporary
  directory with the PHP 5.2.1 function sys_get_temp_dir().
- Implemented feature request #12694: Replace reflection test for class type
  with SPL function.


1.4.3 - Monday 03 March 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12595: Folding is no longer applied twice for To, Cc and Bcc
  headers.


1.4.2 - Thursday 17 January 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12372: MTA transport does not encode subject.


1.4.1 - Monday 14 January 2008